feat: deployment changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://sahitya-sakthivel.github.io",
+  "homepage": "https://sahityasakthivel.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
